--- a/src/components/NotesDisplay.module.css
+++ b/src/components/NotesDisplay.module.css
@@ -45,7 +45,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  background-color: white;
+  background-color: #ffffff;
   padding: 1vh;
   height: 10vh;
   overflow-x: hidden;
